fix grid and cropper

--- a/Source/Blazorise.AntDesign/Styles/utilities/_grid.scss
+++ b/Source/Blazorise.AntDesign/Styles/utilities/_grid.scss
@@ -7,7 +7,8 @@
         padding-right: var(--ant-padding-xs);
 
         &:not([class*="ant-col-"]) {
-            flex-grow: 1;
+            flex: 1 0 0%;
+            max-width: 100%;
         }
     }
 }
