--- a/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
+++ b/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
@@ -8468,6 +8468,37 @@ a.ant-typography-disabled[aria-disabled=true] {
   z-index: 1010 !important;
 }
 
+.ant-row > .ant-col:has(> .ant-col.ant-form-item-control > .ant-form-item-control-input > .ant-form-item-control-input-content > .b-cropper-container),
+.ant-row > .ant-col:has(> .ant-form-item-control-input > .ant-form-item-control-input-content > .b-cropper-container),
+.ant-row > .ant-col.ant-form-item-control:has(> .ant-form-item-control-input > .ant-form-item-control-input-content > .b-cropper-container) {
+  display: flex;
+  flex-direction: column;
+}
+
+.ant-row > .ant-col > .ant-col.ant-form-item-control:has(> .ant-form-item-control-input > .ant-form-item-control-input-content > .b-cropper-container),
+.ant-row > .ant-col > .ant-form-item-control-input:has(> .ant-form-item-control-input-content > .b-cropper-container),
+.ant-row > .ant-col.ant-form-item-control > .ant-form-item-control-input:has(> .ant-form-item-control-input-content > .b-cropper-container) {
+  display: flex;
+  flex: 1 1 auto;
+  min-block-size: 0;
+}
+
+.ant-row > .ant-col > .ant-col.ant-form-item-control:has(> .ant-form-item-control-input > .ant-form-item-control-input-content > .b-cropper-container) > .ant-form-item-control-input,
+.ant-row > .ant-col > .ant-col.ant-form-item-control > .ant-form-item-control-input > .ant-form-item-control-input-content:has(> .b-cropper-container),
+.ant-row > .ant-col > .ant-form-item-control-input > .ant-form-item-control-input-content:has(> .b-cropper-container),
+.ant-row > .ant-col.ant-form-item-control > .ant-form-item-control-input > .ant-form-item-control-input-content:has(> .b-cropper-container) {
+  display: flex;
+  flex: 1 1 auto;
+  min-block-size: 0;
+}
+
+.ant-row > .ant-col > .ant-col.ant-form-item-control > .ant-form-item-control-input > .ant-form-item-control-input-content:has(> .b-cropper-container) > .b-cropper-container,
+.ant-row > .ant-col > .ant-form-item-control-input > .ant-form-item-control-input-content:has(> .b-cropper-container) > .b-cropper-container,
+.ant-row > .ant-col.ant-form-item-control > .ant-form-item-control-input > .ant-form-item-control-input-content:has(> .b-cropper-container) > .b-cropper-container {
+  flex: 1 1 auto;
+  min-block-size: 100%;
+}
+
 .EasyMDEContainer.b-markdown-valid.b-markdown-valid .editor-toolbar,
 .EasyMDEContainer.b-markdown-valid.b-markdown-valid .CodeMirror,
 .EasyMDEContainer.b-markdown-valid.b-markdown-valid .editor-preview-side,
@@ -11365,7 +11396,8 @@ a.ant-typography-disabled[aria-disabled=true] {
   padding-right: var(--ant-padding-xs);
 }
 .ant-row > .ant-col:not([class*=ant-col-]) {
-  flex-grow: 1;
+  flex: 1 0 0%;
+  max-width: 100%;
 }
 
 .ant-container {
